test/classes/initializers/compilerGenerated/dflt-ctor-generic-uninit-field-type-err-1.chpl


class A {
  type t;
}

var x = new borrowed A();
